package edu.wsu.bean_582_2024.ApartmentFinder.model;

public enum Role {
USER,
  OWNER,
  ADMIN
}
